--- a/sampleproject/frontend/Dockerfile
+++ b/sampleproject/frontend/Dockerfile
@@ -9,3 +9,4 @@ RUN npm run build
 
 FROM nginx
 COPY --from=builder /app/build /usr/share/nginx/html
+# Nginx will start automatically as it's default behavior when starting is to start hosting. 
